--- a/demo_spring/src/main/resources/templates/index.html
+++ b/demo_spring/src/main/resources/templates/index.html
@@ -13,9 +13,10 @@
 <div class="container py-5">
   <h1 class="text-center mb-4">Danh Sách Người Dùng</h1>
 
-  <!-- Nút Add User -->
+  <!-- Nút Add User và Add Company -->
   <div class="mb-4 text-center">
     <a href="/addUser" class="btn btn-success btn-lg">Thêm Người Dùng</a>
+    <a href="/addCompany" class="btn btn-primary btn-lg">Thêm Công Ty</a>
   </div>
 
   <!-- Bảng người dùng -->
