--- a/demo_spring/src/main/resources/templates/addUser.html
+++ b/demo_spring/src/main/resources/templates/addUser.html
@@ -9,10 +9,10 @@
 </head>
 <body style="background-color: #f8f9fa;">
 <div class="mb-4 text-center">
-  <a th:href="@{'/home'}" class="btn btn-primary btn-sm">Home</a>
+  <a th:href="@{'/home'}" class="btn btn-primary btn-sm">🏠 Home</a>
 </div>
 <div class="container py-5">
-  <h2 class="text-center mb-4">Add New User</h2>
+  <h2 class="text-center mb-4">➕ Add New User</h2>
 
   <form action="/addUser" method="post">
     <div class="mb-3">
@@ -35,8 +35,16 @@
       <label for="imgURL" class="form-label">Image URL:</label>
       <input type="text" id="imgURL" name="imgURL" class="form-control">
     </div>
+    <!-- Dropdown chọn công ty -->
+    <div class="mb-3">
+      <label for="company" class="form-label">Company:</label>
+      <select id="company" name="companyId" class="form-control">
+        <option value="0">None</option>
+        <option th:each="company : ${companies}" th:value="${company.id}" th:text="${company.companyName}"></option>
+      </select>
+    </div>
     <div class="d-grid gap-2">
-      <button type="submit" class="btn btn-primary btn-lg">Add User</button>
+      <button type="submit" class="btn btn-primary btn-lg">➕ Add User</button>
     </div>
   </form>
 </div>
