--- a/demo_spring/src/main/resources/templates/addCompany.html
+++ b/demo_spring/src/main/resources/templates/addCompany.html
@@ -20,7 +20,7 @@
         </div>
         <div class="text-center">
             <button type="submit" class="btn btn-success">Lưu</button>
-            <a href="/users" class="btn btn-secondary">Quay Lại</a>
+            <a href="/home" class="btn btn-secondary">Quay Lại</a>
         </div>
     </form>
 </div>
